--- a/docs/style.css
+++ b/docs/style.css
@@ -28,6 +28,7 @@ body {
  
 
    backdrop-filter: blur(7px);
+   -webkit-backdrop-filter: blur(7px);
 }
 
 
@@ -41,6 +42,7 @@ body {
 
 .blurry {
     backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px);
 }
 
 .maincontainer {
@@ -417,6 +419,7 @@ width: 100%;
 height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
     visibility: hidden;
     position: absolute;
     opacity: 1;
@@ -446,6 +449,7 @@ height: 100%;
 
 .modalback {
     backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px);
     visibility: visible;
 }
 
