--- a/docs/style.css
+++ b/docs/style.css
@@ -352,7 +352,7 @@ gap: 2rem;
 display: grid;
 grid-template-columns: 1fr;
 grid-template-rows: repeat(1, 1fr);
-
+max-width: 100%;
 background-color: #dbe1df;
 flex-grow: 0;
 border-radius: 10px;
@@ -765,7 +765,8 @@ margin-top: 0;
 margin-bottom: 0;
 margin-left: 0;
 flex-shrink: 0;
- 
+ width: 2rem;
+ height: 2rem;
 }
 
 .prioritywrapperhigh { 
