--- a/docs/style.css
+++ b/docs/style.css
@@ -462,8 +462,9 @@ height: 100%;
     background-color: lightgray;
     width: 3rem;
     margin-bottom: 10px;
- 
-    justify-self: end;
+    align-self: center;
+    justify-self: center;
+  
 }
 
 .show-modal {
@@ -1135,7 +1136,9 @@ border-radius: 0;
 
     @media screen and (max-width: 650px) {
        
-  
+  .todoheadertext {
+    margin-top: 1rem;
+  }
 
     }
 
